--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>诗</title>
-    <script type="module" crossorigin src="/assets/index.f4494cbf.js"></script>
-    <link rel="stylesheet" href="/assets/index.3dd79a12.css">
+    <script type="module" crossorigin src="/assets/index.952b960c.js"></script>
+    <link rel="stylesheet" href="/assets/index.f1a6514e.css">
   </head>
-  <body>
+  <body class="material-theme">
     <div id="root"></div>
     
   </body>
