--- a/index.html
+++ b/index.html
@@ -2,26 +2,26 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="/shi/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/shi/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/shi/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/shi/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/shi/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/shi/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/shi/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/shi/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/shi/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/shi/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/shi/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/shi/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/shi/favicon-16x16.png">
+    <link rel="manifest" href="/shi/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>诗</title>
-    <script type="module" crossorigin src="/assets/index.bf63950a.js"></script>
-    <link rel="stylesheet" href="/assets/index.f1a6514e.css">
+    <script type="module" crossorigin src="/shi/assets/index.b9a32a57.js"></script>
+    <link rel="stylesheet" href="/shi/assets/index.f1a6514e.css">
   </head>
   <body class="material-theme">
     <div id="root"></div>
